YAML-STANDARD/pgadmin-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: mysvc-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: pgadmin
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 80
