YAML-STANDARD/ingress-pgadmin.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-pgadmin
  namespace: default
  generation: 2
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - pgadmin.hackerblog.cloudns.ph
      secretName: pgadmin-secret
  ingressClassName: traefik
  rules:
    - host: pgadmin.hackerblog.cloudns.ph 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 8080
